--- a/index.html
+++ b/index.html
@@ -53,13 +53,15 @@
       </div>
     </nav>
     
+    <!--Title-->
     <div class = "text-center mt-5 mx-auto mb-2 bg-light">
       <h1>Skydance Hot Air Balloon Rides</h1>
       <h4>Ride with the wind. Dance with the sky.</h4>
-      <img class = "img-fluid" src = "https://media.tacdn.com/media/attractions-splice-spp-674x446/06/6e/c8/bf.jpg">
+      <img class = "img-fluid" src = img/balloon-1.jpg>
     </div>
     
-    <div class = "bg-light mt-auto text-dark">
+    <!--Home-->
+    <div class = "bg-light mt-auto text-dark text-center">
       <h2 id = "home">Home</h2>
       <strong>Come make a new memory with us. There's nothing else like it. Fun for both adults and kids. All are welcome! Afraid of heights? You won't be after you slow-dance with the sky.</strong>
     </div>
