--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <!--Gallery-->
     <div class = " bg-dark pt-5">
       <div class = "pb-3">
-        <h2 class = "text-center text-light">Gallery</h2>
+        <h2  id = "gallery" class = "text-center text-light">Gallery</h2>
       </div>
       
       <div id = "demo" class = "carousel slide" data-ride = "carousel">
