insert copyright info

--- a/index.html
+++ b/index.html
@@ -240,5 +240,9 @@
       </div>
     </div>
     
+    <!--Copyright Info-->
+    <div class = "bg-dark text-light">
+      <small>Copyright © 2016   |   SHABR</small>
+    </div>
   </body>
 </html>
